changes in ui and code

--- a/SpringfieldApp/SpringfieldApp.resx
+++ b/SpringfieldApp/SpringfieldApp.resx
@@ -123,23 +123,23 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="springFieldHeader.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 25pt</value>
+    <value>Microsoft Sans Serif, 20.25pt</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="springFieldHeader.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="springFieldHeader.Location" type="System.Drawing.Point, System.Drawing">
-    <value>194, 20</value>
+    <value>173, 29</value>
   </data>
   <data name="springFieldHeader.Size" type="System.Drawing.Size, System.Drawing">
-    <value>247, 39</value>
+    <value>271, 31</value>
   </data>
   <data name="springFieldHeader.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
   <data name="springFieldHeader.Text" xml:space="preserve">
-    <value>SPRINGFIELD</value>
+    <value>Springfield Challenge</value>
   </data>
   <data name="&gt;&gt;springFieldHeader.Name" xml:space="preserve">
     <value>springFieldHeader</value>
@@ -157,7 +157,7 @@
     <value>True</value>
   </data>
   <data name="upload.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 13pt</value>
+    <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="upload.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -166,13 +166,13 @@
     <value>103, 105</value>
   </data>
   <data name="upload.Size" type="System.Drawing.Size, System.Drawing">
-    <value>193, 22</value>
+    <value>138, 20</value>
   </data>
   <data name="upload.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
   <data name="upload.Text" xml:space="preserve">
-    <value>UPLOAD DOCUMENT</value>
+    <value>Upload Document</value>
   </data>
   <data name="&gt;&gt;upload.Name" xml:space="preserve">
     <value>upload</value>
@@ -187,7 +187,7 @@
     <value>4</value>
   </data>
   <data name="browse.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 10pt</value>
+    <value>Microsoft Sans Serif, 11.25pt</value>
   </data>
   <data name="browse.Location" type="System.Drawing.Point, System.Drawing">
     <value>314, 103</value>
@@ -199,7 +199,7 @@
     <value>2</value>
   </data>
   <data name="browse.Text" xml:space="preserve">
-    <value>BROWSE</value>
+    <value>Browse</value>
   </data>
   <data name="&gt;&gt;browse.Name" xml:space="preserve">
     <value>browse</value>
@@ -214,7 +214,7 @@
     <value>3</value>
   </data>
   <data name="process.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 10pt</value>
+    <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="process.Location" type="System.Drawing.Point, System.Drawing">
     <value>314, 145</value>
@@ -226,7 +226,7 @@
     <value>3</value>
   </data>
   <data name="process.Text" xml:space="preserve">
-    <value>PROCESS</value>
+    <value>Process</value>
   </data>
   <data name="&gt;&gt;process.Name" xml:space="preserve">
     <value>process</value>
@@ -244,22 +244,22 @@
     <value>True</value>
   </data>
   <data name="processLabel.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 13pt</value>
+    <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="processLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="processLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>64, 243</value>
+    <value>104, 244</value>
   </data>
   <data name="processLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>232, 22</value>
+    <value>162, 20</value>
   </data>
   <data name="processLabel.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
   </data>
   <data name="processLabel.Text" xml:space="preserve">
-    <value>PROCESSED DOCUMENT</value>
+    <value>Processed Document</value>
   </data>
   <data name="&gt;&gt;processLabel.Name" xml:space="preserve">
     <value>processLabel</value>
@@ -274,7 +274,7 @@
     <value>1</value>
   </data>
   <data name="show.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 10pt</value>
+    <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="show.Location" type="System.Drawing.Point, System.Drawing">
     <value>314, 241</value>
@@ -286,7 +286,7 @@
     <value>5</value>
   </data>
   <data name="show.Text" xml:space="preserve">
-    <value>SHOW</value>
+    <value>Show</value>
   </data>
   <data name="&gt;&gt;show.Name" xml:space="preserve">
     <value>show</value>
@@ -310,7 +310,7 @@
     <value>No</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>SPRINGFIELD</value>
+    <value>SPRINGFIELD CHALLENGE</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>SpringfieldApp</value>
